// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox is checked 1`] = `
<div
  aria-hidden="true"
  class="root checked"
  role="presentation"
>
  <input
    checked=""
    class="input"
    readonly=""
    type="checkbox"
  />
  <div
    class="check checked"
  />
</div>
`;

exports[`Checkbox is disabled 1`] = `
<div
  aria-hidden="true"
  class="root disabled"
  role="presentation"
>
  <input
    class="input"
    disabled=""
    readonly=""
    type="checkbox"
  />
  <div
    class="check"
  />
</div>
`;

exports[`Checkbox renders correctly 1`] = `
<div
  aria-hidden="true"
  class="root"
  role="presentation"
>
  <input
    class="input"
    readonly=""
    type="checkbox"
  />
  <div
    class="check"
  />
</div>
`;

exports[`Checkbox renders with a label 1`] = `
<div
  aria-hidden="true"
  class="root"
  role="presentation"
>
  <input
    class="input"
    label="check here"
    readonly=""
    type="checkbox"
  />
  <div
    class="check"
  />
  <label
    class="label"
  >
    check here
  </label>
</div>
`;
